# Nexg

./: .gitignore  Cargo.toml  LICENSE  README.md  png.txt  triangle.txt
.github/workflows/: rust.yml
examples/: compute.rs  descriptor.rs  index.rs  index_buffer.rs  rectangle.rs  triangle.rs  window.rs
examples/shader/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader2.vert  shader2.vert.spv
src/: device.rs  fence.rs  frame_buffer.rs  image.rs  instance.rs  lib.rs  mem.rs  pipeline.rs  queue.rs  recorder.rs  renderpass.rs  shader.rs  surface.rs  swapchain.rs
src/buffer/: mod.rs
src/sync/: mod.rs  semaphore.rs
