[package]
name = "gear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
window = ["ash-window","raw-window-handle"]

[dependencies]
ash = { version = "0.37", features = ["linked"] }

ash-window = { version = "0.12.0", optional = true }
raw-window-handle = { version = "0.5.0", optional = true }