[package]
name = "nexg"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["window"]
window = ["ash-window","raw-window-handle"]

[dependencies]
ash = { version = "0.37", features = ["linked"] }
log = "0.4.20"

thiserror= "1"

ash-window = { version = "0.12.0", optional = true }
raw-window-handle = { version = "0.5.0", optional = true }

[dev-dependencies]
simple_logger = "4.3.3"
winit = "0.28.7"
png = "0.17.11"
nalgebra-glm = "0.18.0"